posts are okay but leadership no layout

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,7 +13,7 @@ import logo from '../images/HH-logo.png'
     <nav>
       <ul>
         <li><a href="/">Home</a></li>
-        <li><a href="/about">About</a></li>
+        <li><a href="/leadership">Leadership</a></li>
         <li><a href="/news">News</a></li>
       </ul>
     </nav>
