--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -10,7 +10,7 @@
       <h3>Links</h3>
       <ul>
         <li><a href="/">Home</a></li>
-        <li><a href="/about">About</a></li>
+        <li><a href="/leadership">Leadership</a></li>
         <li><a href="/news">News</a></li>
       </ul>
     </div>
