base changes done

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,22 +11,16 @@ import Tabs from '../components/Tabs.astro';
 	
 	<section class="page-content">
 		<div class="container">
-			<h2>Get Started With Astro</h2>
-			<p>
-				Get a new Astro project up and running locally with our helpful
-				create-astro CLI wizard!
-			</p>
+			<h2>The HH Medical Staff Office</h2>
+			<!-- <p>
+				Reach out to the staff member you need to talk to.
+			</p> -->
 		
-			<Tabs headings={['NPM', 'PNPM', 'YARN']} contents={['$ npm create astro@latest', '$ pnpm create astro@latest', '$ yarn create astro']} />
+			<Tabs headings={['Robert Chappell', 'Jonathan White', 'Megan Leech']} contents={['(256)265-6990', '(256)265-2879', '(256)265-2799']} />
 
-			<h3>Start Building</h3>
+			<h3>Let us know if something need attention</h3>
 			<p>
-				Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta ipsum
-				deserunt inventore ut voluptate, officia maiores repellat tenetur
-				praesentium omnis est ex tempora a necessitatibus reiciendis at et
-				dignissimos. Ipsam eius consequuntur cupiditate aperiam porro, esse
-				laborum impedit nesciunt ut voluptatum assumenda aspernatur libero
-				iusto error molestias dolorum, necessitatibus labore?
+				We are here to help you practice medicine and take care of your patients. We are interested to hear from you if you have any concerns or see opportunities for improving our hospital. Please reach out to us.
 			</p>
 		</div>
 	</section>
