--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -2,9 +2,9 @@
 import Card from './Card.astro'
 
 const featuresData = [
-  {title: 'Zero JavaScript Runtime', body: ' Astro renders HTML on the server and strips away any remaining, unused JavaScript.'},
-  {title: 'The Power of Islands', body: ' Need interactive UI? Load individual, non-blocking component islands in parallel.'},
-  {title: 'Lazy-Loading Islands', body: 'Components only hydrate when they scroll into view. If you don\'t see it, Astro won\'t load it.'}
+  {title: 'Credentialing', body: ' The medical staff office processes all requests for priviledges. Dr. White works with Megan Leech and her to team on our credentialling process.'},
+  {title: 'Quality', body: ' Dr. Chappell is the chief quality officer for the HH Health System. He works with Joycelyn Craighead the Quality Mangement team.'},
+  {title: 'Safety', body: ' Our "Journey to Zero" High-Reliavility training initiative is an ongoing effort to ensure safety for our patients.'}
 ];
 ---
 
