instructions followed with url changes

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,9 +9,9 @@
     <div>
       <h3>Links</h3>
       <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/leadership">Leadership</a></li>
-        <li><a href="/news">News</a></li>
+        <li><a href="/HH-MS-News/">Home</a></li>
+        <li><a href="/HH-MS-News/leadership">Leadership</a></li>
+        <li><a href="/HH-MS-News/news">News</a></li>
       </ul>
     </div>
   </div>
