--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,9 +12,9 @@ import logo from '../images/HH-logo.png'
     </div>
     <nav>
       <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/leadership">Leadership</a></li>
-        <li><a href="/news">News</a></li>
+        <li><a href="/HH-MS-News/">Home</a></li>
+        <li><a href="/HH-MS-News/leadership">Leadership</a></li>
+        <li><a href="/HH-MS-News/news">News</a></li>
       </ul>
     </nav>
   </div>
