--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -3,7 +3,8 @@ import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 
 export async function getStaticPaths() {
-  const posts = await Astro.glob('../posts/*.md');
+  // const posts = await Astro.glob('../posts/*.md');
+  const posts = await Astro.glob('../posts/HH-MS-News/*.md');
 
   return posts.map(post => ({
     params: {
@@ -22,7 +23,7 @@ const { Content, frontmatter } = Astro.props.post;
   <section class="page-content">
     <div class="container">
       <Card>
-        <a class="btn" href="/news">Go Back</a>
+        <a class="btn" href="/HH-MS-News/news">Go Back</a>
         <h2>{frontmatter.title}</h2>
         <div>
           Written by <strong>{frontmatter.author} </strong> on {new Date(frontmatter.date).toLocaleDateString()}
