rerouted to front

--- a/src/pages/news.astro
+++ b/src/pages/news.astro
@@ -4,7 +4,7 @@ import Showcase from '../components/Showcase.astro';
 import Card from '../components/Card.astro';
 
 // const posts = await Astro.glob('../posts/*.md');
-const posts = await Astro.glob('../posts/HH-MS-News/*.md');
+const posts = await Astro.glob('..HH-MS-News/posts/*.md');
 
 ---
 
