--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -4,8 +4,9 @@ import Card from '../components/Card.astro';
 
 export async function getStaticPaths() {
   // const posts = await Astro.glob('../posts/*.md');
-  const posts = await Astro.glob('../posts/HH-MS-News/*.md');
-
+  const posts = await Astro.glob('../HH-MS-News/posts/*.md');
+  // const posts = await Astro.glob('../posts/HH-MS-News/*.md');
+  
   return posts.map(post => ({
     params: {
       slug: post.frontmatter.slug
