eliminated HH- route

--- a/src/pages/news.astro
+++ b/src/pages/news.astro
@@ -3,8 +3,8 @@ import Layout from '../layouts/Layout.astro';
 import Showcase from '../components/Showcase.astro';
 import Card from '../components/Card.astro';
 
-// const posts = await Astro.glob('../posts/*.md');
-const posts = await Astro.glob('../HH-MS-News/posts/*.md');
+const posts = await Astro.glob('../posts/*.md');
+// const posts = await Astro.glob('../HH-MS-News/posts/*.md');
 
 ---
 
