--- a/src/pages/news.astro
+++ b/src/pages/news.astro
@@ -19,7 +19,7 @@ const posts = await Astro.glob('../posts/*.md');
           Written by <strong>{post.frontmatter.author} </strong> on {new Date(post.frontmatter.date).toLocaleDateString()}
         </div>
           <p>{post.frontmatter.excerpt}</p>  
-          <a class="more-btn" href={`/${post.frontmatter.slug}`}>Read More</a>
+          <a class="more-btn" href={`/${/HH-MS-News/post.frontmatter.slug}`}>Read More</a>
         </Card>
       ))}
     </div>
