grey bg and white links

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,7 +7,7 @@
   --color-green-darker: #005c3d;
   --color-purple: #830078;
   --color-purple-darker: #5c0054;
-  --color-goldish: #89a2ff;
+  --color-dark-grey: #3c4a3e;
 }
 
 *,
