--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -19,8 +19,7 @@
 
 <style>
   .footer {
-    /* background: var(--color-secondary); */
-    background: var(--color-goldish);
+    background: var(--color-dark-grey);
     color: #fff;
     text-align: center;
     padding: 20px;
@@ -34,9 +33,8 @@
   }
 
   .footer a {
-    /* color: #a741ff; */
-    /* color: #fff; */
-    color: var(--color-secondary);
+    color: #fff;
+    /* color: var(--color-secondary); */
   }
 
   .footer a:hover {
