first draft done

--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -2,9 +2,9 @@
 import Card from './Card.astro'
 
 const featuresData = [
-  {title: 'Credentialing', body: ' The medical staff office processes all requests for priviledges. Dr. White works with Megan Leech and her to team on our credentialling process.'},
+  {title: 'Credentialing', body: ' The medical staff office processes all requests for priviledges. Dr. White works with Megan Leech and her to team on our credentialing process.'},
   {title: 'Quality', body: ' Dr. Chappell is the chief quality officer for the HH Health System. He works with Joycelyn Craighead the Quality Mangement team.'},
-  {title: 'Safety', body: ' Our "Journey to Zero" High-Reliavility training initiative is an ongoing effort to ensure safety for our patients.'}
+  {title: 'Safety', body: ' Our "Journey to Zero" High-Reliability training initiative is an ongoing effort to ensure safety for our patients.'}
 ];
 ---
 
