--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,7 +14,7 @@ import logo from '../images/HH-logo.png'
       <ul>
         <li><a href="/">Home</a></li>
         <li><a href="/leadership">Leadership</a></li>
-        <li><a href="/news">News</a></li>
+        <li><a href="/staff">Staff</a></li>
       </ul>
     </nav>
   </div>
