--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,7 +12,7 @@ import logo from '../images/HH-logo.png'
     </div>
     <nav>
       <ul>
-        <li><a href="/">Home</a></li>
+        <li><a href="/">News</a></li>
         <li><a href="/leadership">Leadership</a></li>
         <li><a href="/staff">Staff</a></li>
       </ul>
