--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Card from '../components/Card.astro';
 
 const posts = await Astro.glob('../posts/*.md');
 // const posts = await Astro.glob('../HH-MS-News/posts/*.md');
+posts.sort((a, b) => Date.parse(b.frontmatter.date) - Date.parse(a.frontmatter.date));
 
 ---
 
