--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,7 +9,7 @@
     <div>
       <h3>Links</h3>
       <ul>
-         <li><a href="/">News</a></li>
+        <li><a href="/">News</a></li>
         <li><a href="/leadership">Leadership</a></li>
         <li><a href="/staff">Staff</a></li>
       </ul>
@@ -34,11 +34,11 @@
 
   .footer a {
     color: #fff;
-    /* color: var(--color-secondary); */
   }
 
   .footer a:hover {
-    text-decoration: underline;
+    color: dodgerblue;
+    text-decoration:none;
   }
 
   .footer h3 {
