--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,4 @@
 ---
-// import logo from '../images/logo.svg'
 import logo from '../images/HH-logo.png'
 ---
 
@@ -9,14 +8,24 @@ import logo from '../images/HH-logo.png'
       <a href="/">
         <img src={logo} alt="" />
       </a>
-    </div>
-    <nav>
-      <ul>
-        <li><a href="/">News</a></li>
-        <li><a href="/leadership">Leadership</a></li>
-        <li><a href="/staff">Staff</a></li>
-      </ul>
-    </nav>
+    </div><nav class="navbar">
+        <ul class="nav-menu">
+          <li class="nav-item">
+            <a href="/" class="nav-link">News</a>
+          </li>
+          <li class="nav-item">
+            <a href="/leadership" class="nav-link">Leadership</a>
+          </li>
+          <li class="nav-item">
+            <a href="/staff" class="nav-link">Staff</a>
+          </li>
+        </ul>
+        <div class="hamburger">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
+      </nav>
   </div>
 </header>
 
@@ -39,15 +48,98 @@ import logo from '../images/HH-logo.png'
   vertical-align: middle;
 }
 
-.header nav ul {
+.navbar{
+  min-height: 70px;
   display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.header nav ul li {
-  padding: 0 10px;
+.nav-branding{
+  font-size: 2rem;
 }
 
-.header nav ul li a {
-  color: #fff;
+.nav-menu{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 60px;
+
 }
+
+.nav-link{
+  transition: 0.3s ease-out;
+}
+
+.nav-link:hover{
+  color: dodgerblue;
+  text-decoration:none;
+}
+
+.hamburger{
+  display: none;
+  cursor: pointer;
+}
+
+.bar{
+  display: block;
+  width: 25px;
+  height: 3px;
+  margin: 5px auto;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  background-color: white;
+}
+
+@media(max-width:1024px){
+  .hamburger{
+    display: block;
+  }
+
+  .hamburger.active .bar:nth-child(2){
+    opacity: 0;
+  }
+  .hamburger.active .bar:nth-child(1){
+    transform: translateY(8px) rotate(45deg);
+  }
+  .hamburger.active .bar:nth-child(3){
+    transform: translateY(-8px) rotate(-45deg);
+  }
+
+  .nav-menu{
+    position: fixed;
+    left: -100%;
+    top: 70px;
+    gap: 0;
+    flex-direction: column;
+    background-color: var(--color-primary);
+    width: 100%;
+    text-align: center;
+    transition: 0.3s;
+  }
+
+  .nav-item{
+    margin: 16px 0;
+  }
+
+  .nav-menu.active{
+    left: 0;
+  }
+}
+
 </style>
+
+<script>
+const hamburger = document.querySelector(".hamburger");
+const navMenu = document.querySelector(".nav-menu");
+
+hamburger.addEventListener("click", () => {
+  hamburger.classList.toggle("active");
+  navMenu.classList.toggle("active");
+})
+
+document.querySelectorAll(".nav-link").forEach(n => n.addEventListener("click", () => {
+  hamburger.classList.remove("active");
+  navMenu.classList.remove("active");
+}))
+</script>
