--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -55,6 +55,11 @@ import logo from '../images/HH-logo.png'
   align-items: center;
 }
 
+ .navbar ul {
+    list-style: none;
+  }
+
+
 .nav-branding{
   font-size: 2rem;
 }
