--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -25,8 +25,10 @@ body {
 
 a {
   text-decoration: none;
-  /* color: #333; */
-  color: white;
+  color: #fff;
+}
+a:hover {
+  color: dodgerblue;
 }
 
 p {
