--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,6 +14,9 @@ import logo from '../images/HH-logo.png'
             <a href="/" class="nav-link">News</a>
           </li>
           <li class="nav-item">
+            <a href="/burnout" class="nav-link">Burnout</a>
+          </li>
+          <li class="nav-item">
             <a href="/leadership" class="nav-link">Leadership</a>
           </li>
           <li class="nav-item">
