--- a/src/pages/staff.astro
+++ b/src/pages/staff.astro
@@ -9,7 +9,7 @@ const staffData = [
   { name: 'Megan Leach', title: 'Director of Medical Staff Services',phone: '(256)265-2799'},
   {name: 'Elizabeth Jones', title: 'Credentialing Specialist - Physician Applicants', phone: '(256)265-6755'},
   {name: 'Nichelle Russell', title: 'Credentialing Specialist - Physician Reappointments', phone: '(256)265-8044'},
-  {name: 'Kenya Halliburton', title: 'Credentialing Specialist - Allied Health Professional Applicants', phone: '(256)265-8856'},
+  {name: 'Kristi Thielbar', title: 'Credentialing Specialist - Allied Health Professional Applicants', phone: '(256)265-8856'},
   {name: 'Sierra Manlapaz', title: 'Credentialing Specialist - Allied Health Professional Reappointments', phone: '(256)265-8858'},
   {name: 'Monique Gilliam', title: 'Department Assistant', phone: '(256)265-3719'},
 ];
