--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,9 +2,7 @@
   <div class="container">
     <div>
       <h3>HH Med Staff News</h3>
-      <p>
-       Created and maintained by the Huntsville Hospital VPMA.
-      </p>
+      <p>Created and maintained by the Huntsville Hospital VPMA.</p>
     </div>
     <div>
       <h3>Links</h3>
@@ -38,7 +36,7 @@
 
   .footer a:hover {
     color: dodgerblue;
-    text-decoration:none;
+    text-decoration: none;
   }
 
   .footer ul {
@@ -52,7 +50,6 @@
   .footer div:nth-child(1) {
     text-align: left;
   }
-
 
   @media (max-width: 500px) {
     .footer div:nth-child(2) {
